[gd_scene load_steps=27 format=3 uid="uid://cu6hx6lsbb0tm"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_8r85i"]
[ext_resource type="Texture2D" uid="uid://cpm28gi1tsfq3" path="res://Assets/mainchar.png" id="2_qtcc5"]
[ext_resource type="Script" path="res://Scripts/Idle.gd" id="3_cnb0j"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_u13ix"]
[ext_resource type="Script" path="res://Scripts/Air.gd" id="4_kettg"]
[ext_resource type="Script" path="res://Scripts/Run.gd" id="5_fi2ly"]
[ext_resource type="Script" path="res://Scripts/Ground_pound.gd" id="7_5mcih"]
[ext_resource type="Script" path="res://Scripts/Dash.gd" id="8_3jj72"]
[ext_resource type="Script" path="res://Scripts/Attack.gd" id="9_tt8xo"]
[ext_resource type="Texture2D" uid="uid://b72yfex3ggaub" path="res://Assets/Slash.png" id="10_qunum"]

[sub_resource type="Animation" id="Animation_fo2wt"]
resource_name = "Air"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_cnxgi"]
resource_name = "Dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40]
}

[sub_resource type="Animation" id="Animation_sh6ay"]
resource_name = "Double_jump"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_yih1t"]
resource_name = "Ground_pound"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [41, 42]
}

[sub_resource type="Animation" id="Animation_0dp0b"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_sntpp"]
resource_name = "Jump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_2w401"]
resource_name = "Knife"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.125, 0.225, 0.3, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_ne458"]
resource_name = "Run"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_rfp8q"]
resource_name = "knockback"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [55]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0tgv"]
_data = {
"Air": SubResource("Animation_fo2wt"),
"Dash": SubResource("Animation_cnxgi"),
"Double_jump": SubResource("Animation_sh6ay"),
"Ground_pound": SubResource("Animation_yih1t"),
"Idle": SubResource("Animation_0dp0b"),
"Jump": SubResource("Animation_sntpp"),
"Knife": SubResource("Animation_2w401"),
"Run": SubResource("Animation_ne458"),
"knockback": SubResource("Animation_rfp8q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpywl"]
size = Vector2(40, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjd7r"]
size = Vector2(192.5, 33)

[sub_resource type="Animation" id="Animation_juyax"]
resource_name = "empty"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_c23th"]
resource_name = "slasj"
length = 0.15
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.11, 0.14),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogjp7"]
_data = {
"empty": SubResource("Animation_juyax"),
"slasj": SubResource("Animation_c23th")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0f5yb"]
size = Vector2(122, 37)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_8r85i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["Player"]]
libraries = {
"": SubResource("AnimationLibrary_b0tgv")
}

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Player"]]
texture_filter = 1
position = Vector2(0, 2.49988)
scale = Vector2(3, 3.07813)
texture = ExtResource("2_qtcc5")
hframes = 7
vframes = 8
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, 18)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_gpywl")

[node name="Camera2D" type="Camera2D" parent="." groups=["Player"]]
offset = Vector2(0, -300)
zoom = Vector2(0.5, 0.5)

[node name="state_machine" type="Node" parent="." groups=["Player"]]
unique_name_in_owner = true
script = ExtResource("3_u13ix")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("3_cnb0j")

[node name="Air" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("4_kettg")

[node name="Timer" type="Timer" parent="state_machine/Air" groups=["Player"]]
wait_time = 0.1

[node name="walljump" type="Timer" parent="state_machine/Air" groups=["Player"]]
wait_time = 0.2

[node name="Run" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("5_fi2ly")

[node name="Ground_pound" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("7_5mcih")

[node name="Dash" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("8_3jj72")

[node name="dashtime" type="Timer" parent="state_machine/Dash" groups=["Player"]]

[node name="attack" type="Node" parent="state_machine" groups=["Player"]]
script = ExtResource("9_tt8xo")

[node name="attacktime" type="Timer" parent="state_machine/attack" groups=["Player"]]

[node name="right" type="RayCast2D" parent="." groups=["Player"]]
target_position = Vector2(67, 0)

[node name="left" type="RayCast2D" parent="." groups=["Player"]]
target_position = Vector2(-67, 0)

[node name="knife" type="Area2D" parent="." groups=["Player"]]

[node name="knifebox" type="CollisionShape2D" parent="knife" groups=["Player"]]
position = Vector2(145.75, 2.5)
shape = SubResource("RectangleShape2D_jjd7r")
disabled = true

[node name="knockback" type="Timer" parent="." groups=["Player"]]
wait_time = 0.4

[node name="Slash" type="Sprite2D" parent="." groups=["Player"]]
texture_filter = 1
position = Vector2(152, 3)
scale = Vector2(3, 1)
texture = ExtResource("10_qunum")
hframes = 3
vframes = 3
frame = 4

[node name="AnimationPlayerk" type="AnimationPlayer" parent="." groups=["Player"]]
libraries = {
"": SubResource("AnimationLibrary_ogjp7")
}

[node name="groundpound" type="Area2D" parent="." groups=["Player"]]

[node name="poundbox" type="CollisionShape2D" parent="groundpound" groups=["Player"]]
position = Vector2(-2, 113.5)
shape = SubResource("RectangleShape2D_0f5yb")
disabled = true

[node name="iframetime" type="Timer" parent="."]

[connection signal="timeout" from="state_machine/Air/Timer" to="state_machine/Air" method="_on_timer_timeout"]
[connection signal="timeout" from="state_machine/Air/walljump" to="state_machine/Air" method="_on_walljump_timeout"]
[connection signal="timeout" from="state_machine/Dash/dashtime" to="state_machine/Dash" method="_on_dashtime_timeout"]
[connection signal="timeout" from="state_machine/attack/attacktime" to="state_machine/attack" method="_on_attacktime_timeout"]
[connection signal="timeout" from="knockback" to="." method="_on_knockback_timeout"]
[connection signal="area_entered" from="groundpound" to="state_machine/Ground_pound" method="_on_groundpound_area_entered"]
[connection signal="timeout" from="iframetime" to="." method="_on_iframetime_timeout"]
